--- a/style.css
+++ b/style.css
@@ -8,13 +8,34 @@ html{
     scroll-behavior: smooth;
 }
 body{
-    background-color: #080808;
-    color: #fff;
+    background-color: black;
+    color:white;
+}
+.arrow-up{
+    background-color: white;
+    position: fixed;
+    bottom:16px ;
+    right: 32px;
+    height: 50px;
+    width: 50px ;
+    border-radius: 50%;
+    display: flex;
+    align-items: center; 
+    justify-content: center;
+    font-size: 32px;
+    color: #1f1f1f;
+    text-decoration: none;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.4s;
+}
+.arrow-up.active{
+
 }
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(images/IMG-20221027-WA0033.jpg);
+    background-image: url(images/IMG-20230611-WA0008.jpg);
     background-size: cover ;
     background-position: center;    
 }
@@ -64,8 +85,10 @@ nav ul li a:hover::after{
     margin-top: 20px;
     font-size: 60px;
 }
-.header-text h1 span{
-    color: #ff004f;
+.header-text h1 span {
+    color:red;}
+.header-text p span {
+        color: #55c29a;
 }
 /* ======about======= */
 #about{
@@ -147,7 +170,7 @@ nav ul li a:hover::after{
      font-size: 13px ;
      font-weight: 300;
      border-radius: 10px;
-     transition: background 0.5s, transform 0.5s;
+     transition: background0.5s, transform 0.5s;
   }
   .service-list div i{
     font-size: 50px;
@@ -217,7 +240,7 @@ nav ul li a:hover::after{
     color: #ff004f;
     text-decoration: none;
     font-size: 28px;
-    line height: 60px;
+    line-height: 60px;
     background: #fff;
     width:60px;
     height:60px;
@@ -239,7 +262,7 @@ nav ul li a:hover::after{
     border-radius: 6px;
     text-decoration: none;
     color: white;
-    transition: background 0.5s;
+    transition: background0.5s;
 }
 .btn:hover{
     background:red;
